--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <h2 class="text-gray-900 text-lg mb-1 font-medium title-font">Campus</h2>
       <p class="leading-relaxed mb-5 text-gray-600">We are mini-academic –city, a self sustained, lush-green campus spread across 1055 acres with about 14,000 inhabitants including faculty members, students, staff and helping hands. The campus is well-equipped with infrastructure which caters to our academic, culinary, residential, recreational, shopping and other needs. For visitors, we have finished Apartments and a Guests House.</p>
       <p class="leading-relaxed mb-5 text-gray-600"> We experience all seasons-the scorching heat of the summer, the wet, the humid afternoons of the rainy season, and the chilly and hazy nights of the winter when sneaks from the street lamps, filtered through the mist, offer breathtaking, visual treat. Our hallmark is the presence of numerous peacocks on Campus, often lurching on the green grounds or resting on high branches. One does not mind the hardwork amidst the consistently emerging and calming, innate picturesque ambience of the campus, and while witnessing the twilight, one eagerly awaits the promise the next day holds. </p>
-      <button class="text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg" onclick="document.location='https://youtu.be/cITzb3i7KC8'">Visual Tour!</button>
+      <button class="text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg" onclick="document.location='https://youtu.be/cITzb3i7KC8'">Virtual Tour!</button>
       <p class="text-xs text-gray-500 mt-3">This video was recorded by our student, Rishabh Ramola</p>
     </div>
   </div>
